# sbi-practical-guide

./: .gitignore  .matplotlibrc  LICENSE  README.md  pyproject.toml  tasks.py
examples/: ball_throw.ipynb
examples/4_1_grav_waves/: 4_1_grav_waves.ipynb  README.md  requirements.txt
examples/4_1_grav_waves/data/: config_file_pycbcmaster.ini
examples/4_3_pyloric/: 4_3_pyloric.ipynb  README.md
examples/ddm/: 4_2_ddm.ipynb  ddm_utils.py
paper/: colors.py
paper/fig10_pyloric/: launch.sh  train.py
paper/fig10_pyloric/notebooks/: 01_analysis_and_diagnostics.ipynb  02_assemble_figure.ipynb  plotting.py  sbi_250425_pyloric.ipynb
paper/fig1_introduction/: 01_create_figure.ipynb
paper/fig2_ball_throw/: 01_create_figure.ipynb
paper/fig4_misspec/: 01_create_figure_misspec.ipynb
paper/fig5_vi_mcmc/: comparing_sampling_times.ipynb  comparission_sampling_times.ipynb  fig_3_3_1.ipynb  mcmc_failure.ipynb  utils.py
paper/fig6_sbi_applications/: 01_create_figure.ipynb
paper/fig8_grav_wave/workflow/: Snakefile  config.yaml
paper/fig8_grav_wave/workflow/profiles/hemera/: config.yaml
paper/fig8_grav_wave/workflow/scripts/: gws-split-data.py  gws-split-denovo.py  gws-utils.py  script-generate-gws.py
paper/fig9_drift_diffusion/: ddm_concept_figure.ipynb  ddm_results_figure.ipynb  main.py
paper/fig9_drift_diffusion/data/: ddm_collapsing_calibration_samples.pt  ddm_collapsing_diagnostics.pt  ddm_collapsing_estimator.pt  ddm_collapsing_posterior_samples.pkl  sbi_ddm_collapsing_prior_theta_x.pkl
